; ModuleID = '/home/carl/AnghaBench/linux/kernel/cgroup/extr_cgroup.c_cgroup_root_from_kf.c'
source_filename = "/home/carl/AnghaBench/linux/kernel/cgroup/extr_cgroup.c_cgroup_root_from_kf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cgroup_root = type { i32 }
%struct.kernfs_root = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.cgroup* }
%struct.cgroup = type { %struct.cgroup_root* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.cgroup_root* @cgroup_root_from_kf(%struct.kernfs_root* %0) #0 {
  %2 = alloca %struct.kernfs_root*, align 8
  %3 = alloca %struct.cgroup*, align 8
  store %struct.kernfs_root* %0, %struct.kernfs_root** %2, align 8
  %4 = load %struct.kernfs_root*, %struct.kernfs_root** %2, align 8
  %5 = getelementptr inbounds %struct.kernfs_root, %struct.kernfs_root* %4, i32 0, i32 0
  %6 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = load %struct.cgroup*, %struct.cgroup** %7, align 8
  store %struct.cgroup* %8, %struct.cgroup** %3, align 8
  %9 = load %struct.cgroup*, %struct.cgroup** %3, align 8
  %10 = getelementptr inbounds %struct.cgroup, %struct.cgroup* %9, i32 0, i32 0
  %11 = load %struct.cgroup_root*, %struct.cgroup_root** %10, align 8
  ret %struct.cgroup_root* %11
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
